# mythos

./: .gitignore  README.md
lab/specs/: mythos-framework.md
lab/xml_parser/: .gitignore  README.md  __init__.py  __main__.py  analyze_rollover_diffs.py  build_import_fy2025.py  cli.py  comparator.py  dashboard.py  ep_to_schj_compare.py  field_maps.py  form_view.py  gt_output.py  models.py  output.py  parser.py  pyproject.toml  reconciler.py  reports.py  review_engine.py  schcf_compare.py  schj_rollover_import.py  workbook_reader.py
lab/xml_parser/specs/: audit-engine.md  qst-compliance-tool.md  reconciler.md  workbook-reader.md  xml-parser.md
lab/xml_parser/specs/reports/: 00-report-standards.md  01-sch-f-rollover.md  02-sch-j-rollover.md  03-page1-static-data.md
