[project]
name = "project-mythos"
version = "0.6.0"
description = "IRS e-File compliance analysis tool for US International Tax"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "mgarcia589" }]

dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "click>=8.1",
    "rich>=13.0",
    "xlsxwriter>=3.2",
    "great-tables>=0.8",
    "reportlab>=4.0",
    "nicegui>=3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
mythos = "lab.xml_parser.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
